# cudabasic

./: CMakeLists.txt  README.md  simple.c  simple.cpp
